[tool.poetry]
name = "cloud-functions-python38-request-bug"
version = "0.1.0"
description = ""
authors = ["Jacob Gur <jacob@fareclock.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.24.0"
functions-framework = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
